# kata-rnp

./: .gitignore  app.py  pyproject.toml  readme.md  roadmap.md
apis/: __init__.py  stack_ns.py
apis/tests/: stack.http
core/: utils.py
core/crud/: stack_crud.py
core/models/: __init__.py  stack_model.py
