[tool.poetry]
name = "kata-rpn"
version = "0.1.0"
description = ""
authors = ["clement_L <clement@inoco.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-restx = "^1.3.0"
marshmallow = "^3.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
